fix: Adjust scrollbar gutter to only right side

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -70,7 +70,7 @@ body {
 
 /* Layout */
 html {
-  scrollbar-gutter: stable both-edges;
+  scrollbar-gutter: stable;
 }
 
 .container {
